added a few more input rows and other things

--- a/index.html
+++ b/index.html
@@ -31,8 +31,20 @@
                         <input type="text" class="form-control" id="enterName">
                     </div>
                     <div class="mb-3">
+                        <label for="enterPrice" class="form-label text-secondary">Product Price</label>
+                        <input type="number" class="form-control" id="enterPrice">
+                    </div>
+                    <div class="mb-3">
                         <label for="enterQuantity" class="form-label text-secondary">Product Quantity</label>
                         <input type="number" class="form-control" id="enterQuantity">
+                    </div>
+                    <div class="mb-3">
+                        <label for="enterDesc" class="form-label text-secondary">Product Description</label>
+                        <input type="text" class="form-control" id="enterDesc">
+                    </div>
+                    <div class="mb-3">
+                        <label for="insertImg" class="form-label text-secondary">Insert Image</label>
+                        <input type="text" class="form-control" id="insertImg">
                     </div>
                     <div class="mb-3 d-flex justify-content-around align-items-center">
                         <button type="submit" class="btn btn-secondary" id="insert">Insert</button>
@@ -45,7 +57,7 @@
             <div class="col-sm-12 col-md-6">
                 <div class="row">
                     <h5 class="text-center text-secondary">Find Product by Code</h5>
-                    <form class="px-3">
+                    <form class="px-3" id="forma">
                         <div class="mb-3">
                             <label for="findID" class="form-label text-secondary">Product Code</label>
                             <input type="number" class="form-control" id="findID" placeholder="only numbers...">
